--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -66,10 +66,12 @@
                             android:textSize="18sp"
                             android:padding="5dp"/>
                         <Spinner
+                            android:id="@+id/IdGenderSpinner"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:entries="@{registerViewModel.form.genders}"
                             android:padding="5dp"
+                            app:OnSelectedGenderChanged="@{registerViewModel.form.user}"
                             android:background="@color/white"/>
                     </LinearLayout>
                     <EditText
@@ -120,6 +122,7 @@
                         android:singleLine="true"
                         android:hint="Location"
                         android:text="@={registerViewModel.form.location}"
+                        app:error="@{registerViewModel.form.locationError}"
                         android:background="@color/white"
                         android:padding="5dp"/>
 
@@ -167,7 +170,7 @@
                         android:layout_marginTop="@dimen/padding_10"
                         android:background="@drawable/bubble_button"
                         android:enabled="@{registerViewModel.form.valid}"
-                        android:onClick="@{() -> registerViewModel.registerUser()}"
+                        android:onClick="onClickDone"
                         android:text="Done"/>
                  </LinearLayout>
             </RelativeLayout>
