--- a/android/app/src/main/res/drawable-v24/shape_bg_incoming_bubble.xml
+++ b/android/app/src/main/res/drawable-v24/shape_bg_incoming_bubble.xml
@@ -8,14 +8,14 @@
             android:pivotY="100%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/purple_200" />
+                <solid android:color="@color/blue" />
             </shape>
         </rotate>
     </item>
 
     <item android:left="5dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/purple_200" />
+            <solid android:color="@color/blue" />
             <corners android:radius="5dp" />
         </shape>
     </item>
