--- a/android/app/src/main/res/drawable-v24/shape_bg_incoming_bubble.xml
+++ b/android/app/src/main/res/drawable-v24/shape_bg_incoming_bubble.xml
@@ -1,26 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:left="10dp">
-        <rotate
-            android:fromDegrees="45"
-            android:pivotX="0%"
-            android:pivotY="100%"
-            android:toDegrees="0" >
-            <shape android:shape="rectangle" >
-                <solid android:color="#88000000" />
-            </shape>
-        </rotate>
-    </item>
-
-    <item android:left="10dp">
-        <shape android:shape="rectangle" >
-            <solid android:color="#88000000" />
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
-
-
     <item>
         <rotate
             android:fromDegrees="45"
@@ -28,21 +8,14 @@
             android:pivotY="100%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/blue" />
+                <solid android:color="@color/purple_200" />
             </shape>
         </rotate>
     </item>
 
     <item android:left="5dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/blue" />
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
-
-    <item android:height="8dp" android:start="7dp">
-        <shape android:shape="rectangle" >
-            <solid android:color="#20FFFFFF" />
+            <solid android:color="@color/purple_200" />
             <corners android:radius="5dp" />
         </shape>
     </item>
