--- a/android/app/src/main/res/drawable-v24/shape_bg_outgoing_bubble.xml
+++ b/android/app/src/main/res/drawable-v24/shape_bg_outgoing_bubble.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content" android:layout_width="wrap_content">
+    <!--Shadow Layer-->
 
 
     <item android:right="5dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/light_blue" />
+            <solid android:color="#4CAF59" />
             <corners android:radius="5dp" />
         </shape>
     </item>
@@ -16,20 +17,15 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@color/light_blue" />
+                <solid android:color="#4CAF59" />
             </shape>
         </rotate>
     </item>
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_blue" />
+            <solid android:color="#4CAF59" />
             <corners android:radius="4dp" />
         </shape>
     </item>
-    <item android:height="8dp" android:start="7dp">
-        <shape android:shape="rectangle" >
-            <solid android:color="#20FFFFFF" />
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
+
 </layer-list>
