--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -17,8 +17,8 @@
     <span class="example-spacer"></span>
     <div>
       <a mat-button [routerLink]="['home']"> Home </a>
-      <a mat-button [routerLink]="['register']"> Register </a>
-      <a mat-button [routerLink]="['login']"> Login </a>
+      <!-- <a mat-button [routerLink]="['register']"> Register </a>
+      <a mat-button [routerLink]="['login']"> Login </a> -->
     </div>
     <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
