--- a/web/src/app/shared/home/home.component.html
+++ b/web/src/app/shared/home/home.component.html
@@ -1,4 +1,16 @@
 
 <div class="wrapper">
-<app-channels-list></app-channels-list>
+
+    <button class="help-to" mat-button type="button" (click)="showChannels()"><span class="material-icons">
+        support_agent
+        </span>Help To</button><br/>
+    <button class="help-me" mat-button (click)="createChannel()">
+        <span class="material-icons">
+            live_help
+            </span>Help Me</button>
+
+
+
+
+<!-- <app-channels-list></app-channels-list> -->
 </div>
